--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "net": "^1.0.2"
+  },
+  "volta": {
+    "node": "16.14.2",
+    "yarn": "1.22.18"
   }
 }
